tests/baselines/reference/parserForStatement5.errors.txt
parserForStatement5.ts(1,6): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
parserForStatement5.ts(1,12): error TS2304: Cannot find name 'b'.


==== parserForStatement5.ts (2 errors) ====
    for ({} in b) {
         ~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
               ~
!!! error TS2304: Cannot find name 'b'.
    }